# xrtm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/skills/webui-design/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docker/: deterministic-acceptance.Dockerfile  local-llm-acceptance.Dockerfile  local-llm-acceptance.compose.yml  provider-free-acceptance.Dockerfile
docs/: getting-started.md  glossary.md  interface-parity.md  next-release-feature-track.md  operator-runbook.md  python-api-reference.md  release-command-contract.json  team-workflows.md  webui-design-language.md
examples/integration/: README.md
examples/integration/batch-processing/: README.md  run_batch.py  sample_questions.json
examples/integration/data-export/: README.md  export.py
examples/integration/fastapi-service/: README.md  app.py  requirements.txt
examples/integration/scheduled-monitor/: README.md  monitor.py  questions.json
scripts/: check_installed_cli_surface.py  check_release_claims.py  docker_deterministic_acceptance.py  docker_local_llm_acceptance.py  docker_provider_free_acceptance.py  live_webui_manager.py
src/xrtm/: __init__.py  version.py
src/xrtm/cli/: __init__.py  main.py  presenters.py
src/xrtm/e2e/: __init__.py  real_questions.py
src/xrtm/product/: __init__.py  artifacts.py  competition.py  doctor.py  history.py  launch.py  monitoring.py  observability.py  performance.py  pipeline.py  profiles.py  providers.py  read_models.py  reports.py  sandbox.py  tui.py  validation.py  web.py  webui_state.py  workbench.py  workflow_authoring.py  workflow_graph.py  workflow_nodes.py  workflow_runner.py  workflows.py
src/xrtm/product/webui_static/: app.css  app.js
src/xrtm/product/workflow_definitions/: __init__.py  demo-deterministic.json  demo-provider-free.json  flagship-benchmark.json  metaculus-cup-dryrun.json
tests/: test_check_installed_cli_surface.py  test_check_release_claims.py  test_cli.py  test_docker_deterministic_acceptance.py  test_docker_local_llm_acceptance.py  test_docker_provider_free_acceptance.py  test_doctor.py  test_integration_examples.py  test_live_webui_manager.py  test_product_api.py  test_product_providers.py  test_product_validation.py  test_sandbox.py  test_workbench.py  test_workflow_authoring.py  test_workflow_graph.py  test_workflow_nodes.py
webui/: build.mjs  package-lock.json  package.json  tsconfig.json
webui/src/: index.tsx  styles.css
