[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrtm"
version = "0.1.1"
description = "The xRtm Framework (Generative Forecasting)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "XRTM Team", email = "moy@xrtm.org"}
]
dependencies = [
    "xrtm-data>=0.2.2",
    "xrtm-eval>=0.2.2",
    "xrtm-forecast>=0.6.2",
    "xrtm-train>=0.2.2"
]

[project.urls]
Repository = "https://github.com/xrtm-org/xrtm"
Documentation = "https://xrtm.org"
Issues = "https://github.com/xrtm-org/xrtm/issues"
